@@ -3,4 +3,5 @@ from CF_proj import *
 from CF_createfile import *
 from CF_loadfile import *
 from CF_colourmap import *
+from CF_options import *
 from CF_area import *
